# myHPI

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  install-bootstrap.py  manage.py  pyproject.toml  settings.py  urls.py  uwsgi.ini  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: build-container.yml  codeql-analysis.yml  dependabot-assign.yml  release.yml  tests.yml
1327-import/: README.md  main.py
core/: context.py  models.py  wagtail_hooks.py
core/migrations/: 0001_initial.py  0002_minutes.py  0003_auto_20210407_1744.py
core/templates/core/: information_page.html  minutes.html  minutes_list.html
deployment/nginx/: Dockerfile  nginx.conf
myhpi/: settings.py  urls.py  wsgi.py
myhpi/core/: auth.py  context.py  markdown_utils.py  middleware.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py  widgets.py
myhpi/core/markdown/: extensions.py  fields.py  utils.py
myhpi/core/migrations/: 0001_initial.py  0002_informationpage_attachments_minutes_attachments.py  0002_minutes.py  0002_rootpage.py  0003_auto_20210407_1744.py  0003_minutes_guests_alter_informationpage_body_and_more.py  0004_firstlevelmenuitem_rootpage_secondlevelmenuitem.py  0004_minuteslabel_color.py  0005_auto_20210414_2107.py  0005_mailinglistsmenuitem.py  0005_redirectmenuitem.py  0006_auto_20210414_2113.py  0006_footerbase_footercategory_and_more.py  0006_informationpage_attachments_minutes_attachments_and_more.py  0007_abbreviationexplanation.py  0007_add_footer.py  0007_alter_footer_column_1_alter_footer_column_2_and_more.py  0008_minutes_visible_for.py  0008_remove_footer_column_4.py  0009_alter_minuteslabel_slug.py  0009_auto_20210612_1328.py  0009_userprofile_for_minutes_display_name.py  0010_auto_20211125_1225.py  0010_minutes_location.py  0011_alter_taggedminutes_tag.py  0011_auto_20220501_1642.py  0011_informationpage_author_visible.py  0012_abbreviationexplanation_locale_and_more.py  0012_basepage_remove_informationpage_page_ptr_and_more.py  0012_menuitem.py  0013_firstlevelmenuitem_informationpage_minutes_rootpage_and_more.py  0013_merge_first_and_second_level_menu_items.py  0013_translate_abbreviationexplanations.py  0014_alter_abbreviationexplanation_locale_and_more.py  0014_alter_basepage_visible_for.py  0014_remove_secondlevelmenuitem_firstlevelmenuitem_ptr_and_more.py  0015_informationpage_author_visible.py  0016_merge_20220705_2034.py  0017_remove_minutes_group_alter_minutes_author_and_more.py
myhpi/core/templatetags/: core_extras.py  minutes_tags.py
myhpi/feed/: middleware.py  models.py  urls.py  views.py
myhpi/feed/migrations/: 0001_initial.py
myhpi/polls/: admin.py  apps.py  forms.py  models.py  wagtail_hooks.py
myhpi/polls/migrations/: 0001_initial.py  0002_auto_20210612_1217.py  0003_auto_20210612_1231.py  0004_poll_participants.py  0005_remove_pollchoice_description.py  0006_auto_20210612_1547.py  0007_auto_20210612_1620.py  0008_polllist.py  0009_alter_poll_description.py  0010_election_electionballot_electioncandidate_and_more.py  0010_remove_pollchoice_page_delete_poll_delete_pollchoice.py  0011_basepoll_rankedchoiceballot_rankedchoiceoption_and_more.py  0011_rename_pollchoice_majorityvotechoice_and_more.py  0012_alter_majorityvotechoice_options_and_more.py  0012_alter_rankedchoiceballotentry_unique_together.py  0012_rename_poll_majorityvote.py  0013_assign_translation_keys.py  0014_enforce_translation_key_locale_unique.py
myhpi/polls/templatetags/: polls.py
myhpi/search/: views.py
myhpi/search/templatetags/: search.py
myhpi/static/: security.txt
myhpi/static/css/: myHPI.css  myHPI_admin.css  text_array_widget.css
myhpi/static/js/: myHPI.js  navbar.js  print_processor.js  search.js  sidebar.js  utils.js
myhpi/static/scss/: footer.scss  myHPI.scss  navbar.scss
myhpi/templates/: 403.html  404.html  500.html  base.html  footer.html  link.html  login.html  menu_level.html  nav_level.html
myhpi/tenca_django/: README.md  __init__.py  admin.py  apps.py  connection.py  exceptions.py  forms.py  hash_storage.py  mailinglist.py  middleware.py  mixins.py  models.py  tests.py  urls.py  views.py  wagtail_hooks.py
myhpi/tenca_django/migrations/: 0001_initial.py  0002_alter_hashentry_options_delete_legacyadminurl.py
myhpi/tenca_django/templatetags/: tenca_extras.py
myhpi/tests/: settings.py  test_markdown_extensions.py  test_minutes_extensions.py
myhpi/tests/core/: setup.py  test_auth.py  test_email_utils.py  test_menu.py  test_metrics.py  test_minute_lists.py  test_minutes.py  test_page_creation.py  test_polls.py  test_redirect_menu_item.py  test_search.py  test_view_permissions.py  test_widgets.py  utils.py
myhpi/tests/feed/: test_feed.py
myhpi/tests/polls/: test_majority_vote.py  test_ranked_choice_algorithm.py
myhpi/tests/tenca_django/: data_test_settings.py  list_test.py  tenca_test.py  test_confirmation.py  test_connection.py  test_findlists.py  test_hash_storage.py  test_listproperties.py  test_roles.py  (+1 more)
myhpi/vouchers/: apps.py  models.py  wagtail_hooks.py
myhpi/wagtail_markdown/: apps.py  edit_handlers.py  fields.py  minutes_extensions.py  utils.py  widgets.py
static/css/: wagtail_1327_admin.css
templates/: base.html
tests/: settings.py  test_minutes_extensions.py
tests/core/: setup.py  test_search.py
tools/: create_test_data.py  install_bootstrap.py  publish_release.py
venv_win/: pyvenv.cfg
wagtail_markdown/: apps.py  fields.py  minutes_extensions.py  utils.py  widgets.py
wagtail_markdown/static/: wagtail-1327 - Verknüpfung.lnk
wagtail_markdown/templatetags/: wagtailmarkdown.py
(+54 files in other folders)
