[tool.poetry]
name = "myHPI"
version = "0.1.0"
description = ""
authors = ["FSR DE <fachschaftsrat@hpi.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wagtail = ">=2.16.2"
django-environ = "^0.9.0"
wagtail-localize = "^1.3"
mozilla-django-oidc = "^3.0.0"
django-bootstrap-icons = "^0.8.2"
django-select2 = "^8.0.0"
django-static-precompiler = {extras = ["libsass"], version = "^2.3"}
django-debug-toolbar = "^3.8.1"
django-permissionedforms = "^0.1"
tenca = "^0.0.2"
html2text = "^2020.1.16"
wagtail-markdown = "^0.10.0"
autoflake = "^1.7.7"

[tool.poetry.dev-dependencies]
pylint = "^2.15.9"
black = "^22.12"
isort = "^5.11.4"
autoflake = "^1.4"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
coverage = "^7.0.1"

[tool.poetry.extras]
pgsql = ["psycopg2"]
mysql = ["mysqlclient"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
# https://github.com/psf/black/blob/master/docs/compatible_configs.md

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_gitignore = true

[tool.pylint.messages_control]
# C0330 and C0301 are disabled for use of black
disable = """C0330, C0301,
duplicate-code, attribute-defined-outside-init, missing-module-docstring, missing-class-docstring,
no-member, invalid-name, import-outside-toplevel, unused-argument, too-many-ancestors, missing-function-docstring,
too-few-public-methods, no-self-use, too-many-arguments, cyclic-import, inconsistent-return-statements,
useless-object-inheritance, logging-fstring-interpolation
"""

[tool.pylint.format]
max-line-length = "100"
